--- a/5fragen/meta.yaml
+++ b/5fragen/meta.yaml
@@ -11,7 +11,7 @@ contributor:
 - "Redaktion LIBREAS"
 title: "Fünf Fragen zur Nachhaltigkeit von Forschungsinfrastrukturen"
 subtitle: "Zwei Interviews"
-pdf: "master.pdf"
+urn: "urn:nbn:de:kobv:11-110-18452/22145-9	"
 date: 2019-12-15
 comments: false
 sharing: true
